--- a/Session/src/main/res/values/strings.xml
+++ b/Session/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="facebook_app_id">344497275974777</string>
 </resources>
